--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "usage demo for prom-client && grafana cloud",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "keywords": [
     "node",
@@ -13,5 +13,9 @@
     "prom-client"
   ],
   "author": "juniortour@qq.com",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2",
+    "prom-client": "^14.2.0"
+  }
 }
