--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "node-prometheus-grafana-demo",
   "version": "1.0.0",
   "description": "usage demo for prom-client && grafana cloud",
-  "main": "app.js",
+  "main": "./src/app.js",
   "scripts": {
-    "start": "node app.js"
+    "dev": "node --inspect-brk ./src/app.js",
+    "start": "node ./src/app.js"
   },
   "keywords": [
     "node",
